port sessionInfo() improvements from trunk. document its return value.
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52587 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,9 @@ NEW FEATURES
     o	R CMD check runs the package-specific tests with LANGUAGE=en
 	set, to facilitate comparison to .Rout.save files.
 
+    o	sessionInfo() gives more detailed platform information,
+	including 32/64-bit and the sub-architecture if one is used.
+
 
 BUG FIXES
 
