--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4668,16 +4668,16 @@ libraries and to correct some header files: a suitable toolchain can be
 found at
 @url{http://www.stats.ox.ac.uk/@/pub/@/Rtools/@/Win64No_toolchain.zip}.
 
-@strong{However}, toolchains from late April 2010 on at that site
-generate objects with symbols without a leading underscore.  Current
-R-devel snapshots are made with the earlier toolchain (as used for @R{}
-2.11.x) which does use leading underscores, so that is the current
-default for @code{SYMPAT64} in @file{src/gnuwin32/MkRules.dist}.  If you
-are using a binary distribution of @R{}, check that the settings of
-@code{BINPREF} and @code{SYMPAT} in file @file{etc/x64/Makeconf} are
-appropriate to your toolchain.  The use or not of leading underscores
-affects linking to external static and import libraries but not linking
-directly to DLLs.
+@strong{NB:} toolchains from late April 2010 on at that site generate
+objects with symbols without a leading underscore.  Other toolchains
+(including that used for @R{} 2.11.x) may use leading underscores, in
+which case @code{SYMPAT64} in @file{src/gnuwin32/MkRules.dist} needs to
+be set (see the comments in that file).  If you are using a binary
+distribution of @R{}, check that the settings of @code{BINPREF} and
+@code{SYMPAT} in file @file{etc/x64/Makeconf} are appropriate to your
+toolchain (following the comments in the file).  The use or not of
+leading underscores affects linking to external static and import
+libraries but not linking directly to DLLs.
 
 Other toolchains are available: for example under
 @uref{http://sourceforge.net/projects/mingw-w64/files/Toolchains%20targetting%20Win64/Personal%20Builds/}
